syntax = "proto3";

option csharp_namespace = "Eternity.Proto";

package Eternity.Proto;

message MessageToServer {

}

message MessageToWorker {

}


service EternityService {
	rpc ConnectWorker(stream MessageToServer) returns (stream MessageToWorker);
}